docs/apache-airflow-providers-google/10.24.0/_sources/_api/tests/system/google/cloud/gcs/example_firestore/index.rst.txt
:py:mod:`tests.system.google.cloud.gcs.example_firestore`
=========================================================

.. py:module:: tests.system.google.cloud.gcs.example_firestore

.. autoapi-nested-parse::

   Example Airflow DAG showing export of database from Google Cloud Firestore to Cloud Storage.

   This example creates collections in the default namespaces in Firestore, adds some data to the collection
   and exports this database from Cloud Firestore to Cloud Storage.
   It then creates a table from the exported data in Bigquery and checks that the data is in it.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'firestore_to_gcp'

   

.. py:data:: BUCKET_NAME

   

.. py:data:: DATASET_NAME

   

.. py:data:: EXPORT_DESTINATION_URL

   

.. py:data:: EXPORT_COLLECTION_ID

   

.. py:data:: EXTERNAL_TABLE_SOURCE_URI

   

.. py:data:: DATASET_LOCATION
   :value: 'EU'

   

.. py:data:: KEYS

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

