docs/apache-airflow-providers-google/14.0.0/_sources/_api/tests/system/google/cloud/gcs/example_firestore/index.rst.txt
tests.system.google.cloud.gcs.example_firestore
===============================================

.. py:module:: tests.system.google.cloud.gcs.example_firestore

.. autoapi-nested-parse::

   Example Airflow DAG showing export of database from Google Cloud Firestore to Cloud Storage.

   This example creates collections in the default namespaces in Firestore, adds some data to the collection
   and exports this database from Cloud Firestore to Cloud Storage.
   It then creates a table from the exported data in Bigquery and checks that the data is in it.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.gcs.example_firestore.ENV_ID
   tests.system.google.cloud.gcs.example_firestore.PROJECT_ID
   tests.system.google.cloud.gcs.example_firestore.DAG_ID
   tests.system.google.cloud.gcs.example_firestore.BUCKET_NAME
   tests.system.google.cloud.gcs.example_firestore.DATASET_NAME
   tests.system.google.cloud.gcs.example_firestore.EXPORT_DESTINATION_URL
   tests.system.google.cloud.gcs.example_firestore.EXPORT_COLLECTION_ID
   tests.system.google.cloud.gcs.example_firestore.EXTERNAL_TABLE_SOURCE_URI
   tests.system.google.cloud.gcs.example_firestore.DATASET_LOCATION
   tests.system.google.cloud.gcs.example_firestore.KEYS
   tests.system.google.cloud.gcs.example_firestore.create_bucket
   tests.system.google.cloud.gcs.example_firestore.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: PROJECT_ID

.. py:data:: DAG_ID
   :value: 'firestore_to_gcp'


.. py:data:: BUCKET_NAME
   :value: 'bucket_firestore_to_gcp_Uninferable'


.. py:data:: DATASET_NAME
   :value: ''


.. py:data:: EXPORT_DESTINATION_URL
   :value: 'gs://bucket_firestore_to_gcp_Uninferable/namespace'


.. py:data:: EXPORT_COLLECTION_ID
   :value: ''


.. py:data:: EXTERNAL_TABLE_SOURCE_URI

.. py:data:: DATASET_LOCATION
   :value: 'EU'


.. py:data:: KEYS

.. py:data:: create_bucket

.. py:data:: test_run

